--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,3 +89,38 @@
   .logo img {
     width: 300px;
   }
+
+  /* HEADER*/
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 25px;
+    transition: var(--transition-2);
+    z-index: 2;
+  }
+
+  .header:active{
+    background-color: var(--eerie-black);
+    padding: 20px;
+  }
+
+  .header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-actions{
+display: none;
+  }
+
+      .bnt-mobile ion-icon{
+        font-size: 40px;
+        color: var(--white);
+        cursor: pointer;
+      }
+      button{
+        background: transparent;
+        border: none;
+      }
