--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,4 +202,46 @@ display: none;
           pointer-events: all;
         }
 
-          
+          /* BANNER*/ 
+          .h1,
+          .h2,
+          .h3{color: var(--white);
+          line-height: 40px;
+          }
+          .h1{
+            font-size: var(--fs-1);
+            }
+            I
+            .h2{
+            font-size: var(--fs-2);
+            }
+            .h3{
+            font-size: var(--fs-6);
+            }
+            
+  .hero{
+    background: url(../img/livraria.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+   display: flex;
+    justify-content: flex-start;
+   align-items: center;
+   padding-block: var(--section-padding);
+  }
+
+.hero-content{
+  margin-top: 60px;
+}
+.hero-subtitle{
+  color: var(--citrine);
+  font-size: var(--fs-4);
+  font-weight: var(--fw-700);
+  margin-bottom: 20px;
+}
+.hero-title{
+  margin-bottom: 30px;
+}
+.hero-title > strong{
+  color: var(--citrine);
+}
